<resources>
    <string name="app_name">GithubIssueTracker</string>
    <string name="opened">Opened</string>
    <string name="open">Open</string>
    <string name="_29_oct_2019">29 Oct 2019</string>
    <string name="fastlane_droid">fastlane-droid</string>
    <string name="sample_total_comments">5</string>
    <string name="comments">comments</string>
    <string name="repository">Repository</string>
    <string name="sample_body_text">\@TheDancerCodes Is it possible to also add a sample CI, for Github Actions.\nAlso, show how we can run different lanes in different branches</string>
    <string name="menu_search">Search</string>
    <string name="search_user_issues">Search User Issues</string>
    <string name="empty_result">Empty Result</string>
    <string name="bug">bug</string>
    <string name="documentation">documentation</string>
    <string name="duplicate">duplicate</string>
    <string name="enhancement">enhancement</string>
    <string name="good_first_issue">good first issue</string>
    <string name="help_wanted">help wanted</string>
    <string name="invalid">invalid</string>
    <string name="question">question</string>
    <string name="wontfix">wontfix</string>
    <string name="no_data_available">No data available</string>
    <string name="no_network_connection">No network connection</string>
    <string name="response_error_string">Error ! Please confirm the github username is correct</string>

</resources>